--- a/apps/docs/content/guides/auth/oauth-server/oauth-flows.mdx
+++ b/apps/docs/content/guides/auth/oauth-server/oauth-flows.mdx
@@ -446,7 +446,7 @@ https://<project-ref>.supabase.co/auth/v1/.well-known/openid-configuration
 
 This endpoint returns metadata about:
 
-- Available endpoints (authorization, token, userinfo, jwks)
+- Available endpoints (authorization, token, userinfo, JWKS)
 - Supported grant types and response types
 - Supported scopes and claims
 - Token signing algorithms
